# avnet-azure-sphere-AzureRTOS

./: .gitignore  .gitmodules  README.md
Examples/Avnet-ALS-PT19-LIghtSensor/: CMakeLists.txt  CMakeSettings.json  README.md  als_pt19_light_sensor.h  app_manifest.json  buildOptions.h  launch.vs.json  mbox_logic.c
Examples/Avnet-HTU21D-TempHumRTApp/: CMakeLists.txt  README.md  app_manifest.json  buildOptions.h  htu21d_rtapp.h  launch.vs.json  lsm6dso_htu21d_rtapp.h  mbox_logic.c
Examples/Avnet-HTU21D-TempHumRTApp/HTU21D/: htu21d.c  htu21d.h
Examples/Avnet-HTU21D-TempHumRTApp/IMU_lib/: imu_temp_pressure.c  imu_temp_pressure.h
Examples/Avnet-LPS22HH-PressureSensorRTApp/: CMakeLists.txt  README.md  app_manifest.json  launch.vs.json  lps22hh_rtapp.h  mbox_logic.c
Examples/Avnet-LPS22HH-PressureSensorRTApp/IMU_lib/: lps22hh_reg.c  lsm6dso_reg.h
Examples/Avnet-LSM6DS0RTApp/: CMakeLists.txt  README.md  app_manifest.json  lsm6dso_rtapp.h  mbox_logic.c
Examples/Avnet-LSM6DS0RTApp/IMU_lib/: imu_temp_pressure.c  imu_temp_pressure.h
Examples/Avnet-LSM6DSO-AccelerometerRTApp/: CMakeLists.txt  README.md  app_manifest.json  buildOptions.h  intercore_generic.h  launch.vs.json  lsm6dso_rtapp.h  mbox_logic.c
Examples/Avnet-SmartRetailShelf-PHT-Lightranger5-RTApp/: CMakeLists.txt  README.md  app_manifest.json  avnet_starter_kit_hw.h  buildOptions.h  mbox_logic.c
Examples/Avnet-TE-MS8607-AMS-8801/: CMakeLists.txt  README.md  app_manifest.json  avnet_starter_kit_hw.h  buildOptions.h  mbox_logic.c  pht_lightranger5_clicks.h
Examples/Avnet-TE-MS8607-RTApp/: CMakeLists.txt  README.md  app_manifest.json  avnet_starter_kit_hw.h  buildOptions.h  mbox_logic.c
Examples/AvnetAirQuality5RTApp/: CMakeLists.txt  README.md  airquality5_rt_app.h  app_manifest.json  avnet_starter_kit_hw.h  mbox_logic.c
Examples/AvnetAirQuality5RTApp/airquality5/: main.c
Examples/AvnetGenericMikroeRTApp/: CMakeLists.txt  README.md  app_manifest.json  avnet_starter_kit_hw.h  buildOptions.h  generic_rt_app.h  mbox_logic.c
Examples/AvnetGenericRTApp/: CMakeLists.txt  README.md  app_manifest.json  generic_rt_app.h  launch.vs.json  mbox_logic.c
Examples/AvnetGroveGPS/: CMakeLists.txt  README.md  app_manifest.json  buildOptions.h  grove_gps.h  launch.vs.json  mbox_logic.c
Examples/AvnetHwWatchDogRTApp/: CMakeLists.txt  README.md  app_manifest.json  generic_rt_app.h  hw_watchdog_app.h  launch.vs.json  mbox_logic.c
Examples/AvnetLSM6DSLClickRTApp/: CMakeLists.txt  avnet_starter_kit_hw.h  buildOptions.h  rtcoremain.c
Examples/AvnetLightRanger5-RTApp/: CMakeLists.txt  README.md  app_manifest.json  avnet_starter_kit_hw.h  buildOptions.h  launch.vs.json  mbox_logic.c
Examples/AvnetPWRMeterClickRTApp/: CMakeLists.txt  README.md  app_manifest.json  avnet_starter_kit_hw.h  buildOptions.h  generic_rt_app.h  mbox_logic.c
Examples/AvnetThermoClickRTApp/: CMakeLists.txt  README.md  app_manifest.json  buildOptions.h  mbox_logic.c  thermo.c  thermo.h  thermo_click_rt_app.h
MT3620_M4_BSP/: CMakeLists.txt
MT3620_M4_BSP/FreeRTOS/: CMakeLists.txt
MT3620_M4_BSP/mt3620/: LICENSE
MT3620_M4_Driver/: CMakeLists.txt  LICENSE
MT3620_M4_Sample_Code/AzureRTOS/: README.md
MT3620_M4_Sample_Code/AzureRTOS/AvnetGroveGPS/: AzureSphereRTCoreToolchainMTK.cmake  CMakeLists.txt  README.md  app_manifest.json  launch.vs.json  mbox_logic.c
binaries/: README.md
binaries/RTApp-1-Images/: AvnetAlsPt19_RTApp-App1-V1.imagepackage  AvnetGeneric_RTApp-App1-V1.imagepackage  AvnetGroveGpsRTApp-Rev1-App1-V1.imagepackage  AvnetGroveGpsRTApp-Rev2-Click1-App1-V1.imagepackage  AvnetGroveGpsRTApp-Rev2-Click2-App1-V1.imagepackage  AvnetHTU21dRTApp-App1-V1.imagepackage  AvnetLPS22HH-RTApp-App1-V1.imagepackage  AvnetLSM6DSO-RTApp-App1-V1.1.imagepackage  AvnetLSM6DSO-RTApp-App1-V1.imagepackage  AvnetLightRanger5Click-Rev1-Click2-App1-V1.imagepackage  AvnetLightRanger5Click-Rev1-Click2-App1-V2.imagepackage  AvnetLightRanger5Click-Rev2-Click1-App1-V1.imagepackage  AvnetLightRanger5Click-Rev2-Click1-App1-V2.imagepackage  AvnetLightRanger5Click-Rev2-Click2-App1-V1.imagepackage  AvnetLightRanger5Click-Rev2-Click2-App1-V2.imagepackage  AvnetMCPF511ARTApp-ISU0-App1-V1.imagepackage  AvnetMCPF511ARTApp-ISU1-App1-V1.imagepackage  AvnetPWRmeterClickRTApp-Rev1-App1-V1.imagepackage  AvnetPWRmeterClickRTApp-Rev2-Click1-App1-V1.imagepackage  AvnetThermoClick-Rev1-Click1-App1-V.1.1.imagepackage  AvnetThermoClick-Rev1-Click1-App1-V1.imagepackage  AvnetThermoClick-Rev1-Click2-App1-V.1.1.imagepackage  AvnetThermoClick-Rev1-Click2-App1-V1.imagepackage  AvnetThermoClick-Rev2-Click1-App1-V.1.1.imagepackage  AvnetThermoClick-Rev2-Click1-App1-V1.imagepackage
binaries/RTApp-2-Images/: AvnetAlsPt19_RTApp-App2-V1.imagepackage  AvnetGeneric_RTApp-App2-V1.imagepackage  AvnetGroveGpsRTApp-Rev1-App2-V1.imagepackage  AvnetGroveGpsRTApp-Rev2-Click1-App2-V1.imagepackage  AvnetGroveGpsRTApp-Rev2-Click2-App2-V1.imagepackage  AvnetHTU21dRTApp-App2-V1.imagepackage  AvnetLPS22HH-RTApp-App2-V1.imagepackage  AvnetLSM6DSO-RTApp-App2-V1.1.imagepackage  AvnetLSM6DSO-RTApp-App2-V1.imagepackage  AvnetLightRanger5Click-Rev1-Click1-App2-V1.imagepackage  AvnetLightRanger5Click-Rev1-Click1-App2-V2.imagepackage  AvnetLightRanger5Click-Rev1-Click2-App2-V1.imagepackage  AvnetLightRanger5Click-Rev1-Click2-App2-V2.imagepackage  AvnetLightRanger5Click-Rev2-Click1-App1-V2.imagepackage  AvnetLightRanger5Click-Rev2-Click1-App2-V1.imagepackage  AvnetLightRanger5Click-Rev2-Click2-App2-V1.imagepackage  AvnetLightRanger5Click-Rev2-Click2-App2-V2.imagepackage  AvnetMCPF511ARTApp-ISU0-App2-V1.imagepackage  AvnetMCPF511ARTApp-ISU1-App2-V1.imagepackage  AvnetPHTClickRTApp-App2-V1.imagepackage  AvnetPWRmeterClickRTApp-Rev1-App2-V1.imagepackage  AvnetPWRmeterClickRTApp-Rev2-Click1-App2-V1.imagepackage  AvnetThermoClick-Rev1-Click1-App2-V.1.1.imagepackage  AvnetThermoClick-Rev1-Click1-App2-V1.imagepackage  AvnetThermoClick-Rev1-Click2-App2-V.1.1.imagepackage  AvnetThermoClick-Rev1-Click2-App2-V1.imagepackage  AvnetThermoClick-Rev2-Click1-App2-V.1.1.imagepackage  AvnetThermoClick-Rev2-Click1-App2-V1.imagepackage
(+189 files in other folders)
